# matrix_discord_relay

./: .gitignore  Cargo.toml  LICENSE  appservice-registration_example.yaml  config_example.toml  readme.md
src/: chat_service.rs  discord_bot.rs  main.rs
src/discord/: bot.rs  mod.rs  relay.rs
src/matrix/: bot.rs  relay.rs
