[package]
name = "matrix_discord_relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = {git = "https://github.com/matrix-org/matrix-rust-sdk", features = ["experimental-timeline"]}
matrix-sdk-appservice = {git = "https://github.com/matrix-org/matrix-rust-sdk"}
serde = "1.0.160"
toml = "0.7.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
ruma = { version = "0.8.2", features = [] }

anyhow = "1.0.71"

tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"]}
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
futures = "0.3.28"
lazy_static = "1.4.0"

serde_json = "1.0"

rusqlite = { version = "0.29.0", features = ["bundled"] }
markdown = "1.0.0-alpha.9"
